Fixed some missin translations and font family on heading.

--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -129,6 +129,12 @@
     "recipe_3_title": "آش رشته: گرمای دورهمی",
     "recipe_3_desc": "طرز تهیه آش رشته سنتی با کشک و پیاز داغ فراوان، مناسب برای عصرهای سرد."
   },
+  "blog": {
+    "featuredTitle": "داستان‌های ویژه",
+    "featuredSubtitle": "محبوب‌ترین دستورها و سفرهای فرهنگی ما.",
+    "featured": "ویژه",
+    "viewAll": "مشاهده همه"
+  },
   "contact_page": {
     "title": "تماس با ما",
     "subtitle": "مشتاق شنیدن نظرات شما هستیم. پیام دهید یا با ما تماس بگیرید.",
