--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -127,6 +127,12 @@
     "recipe_3_title": "لاندی پلو: د ژمي سوغات",
     "recipe_3_desc": "د وچې غوښې (لاندی) پلو پخولو دودیزه طریقه د ریحانه په دیګ کې."
   },
+  "blog": {
+    "featuredTitle": "ځانګړې کیسې",
+    "featuredSubtitle": "زموږ تر ټولو خوښې ترکیبونه او کلتوري سفرونه.",
+    "featured": "ځانګړی",
+    "viewAll": "ټول وګورئ"
+  },
   "contact_page": {
     "title": "موږ سره اړیکه ونیسئ",
     "subtitle": "موږ خوښ یو چې له تاسو واورو. موږ ته پیغام واستوئ یا لیدنه وکړئ.",
