--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -86,7 +86,8 @@
     "upload_title": "شاهکار خود را به اشتراک بگذارید",
     "upload_placeholder": "برای آپلود عکس کلیک کنید",
     "upload_note": "لحظات آشپزی خود با دیگ ریحانه را به اشتراک بگذارید",
-    "submit_photo": "ارسال عکس"
+    "submit_photo": "ارسال عکس",
+    "view_all": "مشاهده همه"
   },
   "newsletter": {
     "title": "عضویت در خانواده ریحانه",
@@ -134,6 +135,14 @@
     "featuredSubtitle": "محبوب‌ترین دستورها و سفرهای فرهنگی ما.",
     "featured": "ویژه",
     "viewAll": "مشاهده همه"
+  },
+  "help": {
+    "notFound": "مطلب راهنما پیدا نشد",
+    "description": "صفحه راهنمایی که به دنبالش هستید وجود ندارد.",
+    "backToCenter": "بازگشت به مرکز راهنما",
+    "stepByStep": "مرحله‌به‌مرحله",
+    "tips": "نکات",
+    "needHelpEmail": "هنوز کمک می‌خواهید؟ ایمیل بزنید"
   },
   "contact_page": {
     "title": "تماس با ما",
