--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -86,7 +86,8 @@
     "upload_title": "خپله شاهکار شریک کړئ",
     "upload_placeholder": "د عکس پورته کولو لپاره کلیک وکړئ",
     "upload_note": "د ریحانه دیګ سره د پخلي شیبې شریک کړئ",
-    "submit_photo": "عکس وسپارئ"
+    "submit_photo": "عکس وسپارئ",
+    "view_all": "ټولې انځورونه وګورئ"
   },
   "newsletter": {
     "title": "د ریحانه کورنۍ سره یوځای شئ",
@@ -132,6 +133,14 @@
     "featuredSubtitle": "زموږ تر ټولو خوښې ترکیبونه او کلتوري سفرونه.",
     "featured": "ځانګړی",
     "viewAll": "ټول وګورئ"
+  },
+  "help": {
+    "notFound": "د مرستې مقاله ونه موندل شوه",
+    "description": "هغه د مرستې پاڼه چې تاسو یې لټوئ شتون نه لري.",
+    "backToCenter": "د مرستې مرکز ته ستنېدل",
+    "stepByStep": "ګام په ګام",
+    "tips": "لارښوونې",
+    "needHelpEmail": "لا هم مرسته غواړئ؟ برېښنالیک واستوئ"
   },
   "contact_page": {
     "title": "موږ سره اړیکه ونیسئ",
