fixed translation issues

--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -138,9 +138,22 @@
     "notFound": "د مرستې مقاله ونه موندل شوه",
     "description": "هغه د مرستې پاڼه چې تاسو یې لټوئ شتون نه لري.",
     "backToCenter": "د مرستې مرکز ته ستنېدل",
+    "center": "د مرستې مرکز",
+    "centerTitle": "د مرستې مرکز",
     "stepByStep": "ګام په ګام",
     "tips": "لارښوونې",
-    "needHelpEmail": "لا هم مرسته غواړئ؟ برېښنالیک واستوئ"
+    "needHelpEmail": "لا هم مرسته غواړئ؟ برېښنالیک واستوئ",
+    "lastUpdated": "وروستی تازه کول"
+  },
+  "terms": {
+    "footer": {
+      "needHelp": "مرستې ته اړتیا لرئ؟ لاړ شئ",
+      "helpCenter": "د مرستې مرکز"
+    }
+  },
+  "privacy": {
+    "effectiveDate": "د پلي کېدو نېټه",
+    "needHelp": "مرستې ته اړتیا لرئ؟ لاړ شئ"
   },
   "contact_page": {
     "title": "موږ سره اړیکه ونیسئ",
