--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -140,9 +140,22 @@
     "notFound": "مطلب راهنما پیدا نشد",
     "description": "صفحه راهنمایی که به دنبالش هستید وجود ندارد.",
     "backToCenter": "بازگشت به مرکز راهنما",
+    "center": "مرکز راهنما",
+    "centerTitle": "مرکز راهنما",
     "stepByStep": "مرحله‌به‌مرحله",
     "tips": "نکات",
-    "needHelpEmail": "هنوز کمک می‌خواهید؟ ایمیل بزنید"
+    "needHelpEmail": "هنوز کمک می‌خواهید؟ ایمیل بزنید",
+    "lastUpdated": "آخرین به‌روزرسانی"
+  },
+  "terms": {
+    "footer": {
+      "needHelp": "کمک می‌خواهید؟ سری بزنید به",
+      "helpCenter": "مرکز راهنما"
+    }
+  },
+  "privacy": {
+    "effectiveDate": "تاریخ اجرا",
+    "needHelp": "کمک می‌خواهید؟ سری بزنید به"
   },
   "contact_page": {
     "title": "تماس با ما",
