fixed minor issues related to the share photo loading status, like desklike and so on

--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -158,8 +158,8 @@
   },
   "comments": {
     "message": "پیام",
-    "signedIn": "واد سیستم شده اید",
-    "title": "نظریات",
+    "signedIn": "وارد سیستم شده\u200cاید",
+    "title": "نظرات",
     "submit": "ارسال نظر"
   },
   "privacy": {
