--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -25,6 +25,9 @@
     "connection": "ارتباط",
     "simplicity": "سادگی"
   },
+  "common": {
+    "loading": "در حال بارگذاری..."
+  },
   "contact": {
     "title": "تماس با ما",
     "name": "نام",
@@ -87,7 +90,14 @@
     "upload_placeholder": "برای آپلود عکس کلیک کنید",
     "upload_note": "لحظات آشپزی خود با دیگ ریحانه را به اشتراک بگذارید",
     "submit_photo": "ارسال عکس",
-    "view_all": "مشاهده همه"
+    "view_all": "مشاهده همه",
+    "search": "جستجو بر اساس غذا یا نام",
+    "sort_newest": "جدید ترین",
+    "sort_popular": "بیشترین لایک",
+    "empty": "عکسی پیدا نشد.",
+    "unlike": "نه‌پسندیدن",
+    "like": "پسند کردن",
+    "uploadSize": "JPG، PNG (حداکثر ۵ مگابایت)"
   },
   "newsletter": {
     "title": "عضویت در خانواده ریحانه",
@@ -137,7 +147,12 @@
     "viewAll": "مشاهده همه",
     "cookWithUs": "آماده پخت قابلی پلو اصیل هستی؟",
     "featuredStory": "داستان ویژه",
-    "readMore": "ادامه خواندن"
+    "readMore": "ادامه خواندن",
+    "title": "مجله آشپزی ریحانه",
+    "subtitle": "کاوش در میراث غنی آشپزی جاده ابریشم، هر بار با روایتی جداگانه",
+    "next": "بعدی",
+    "prev": "قبلی",
+    "loading": "بارگذاری پست..."
   },
   "help": {
     "notFound": "مطلب راهنما پیدا نشد",
@@ -148,7 +163,8 @@
     "stepByStep": "مرحله‌به‌مرحله",
     "tips": "نکات",
     "needHelpEmail": "هنوز کمک می‌خواهید؟ ایمیل بزنید",
-    "lastUpdated": "آخرین به‌روزرسانی"
+    "lastUpdated": "آخرین به‌روزرسانی",
+    "needHelp": "کمک می‌خواهید؟ به ما ایمیل بزنید به آدرس"
   },
   "terms": {
     "footer": {
@@ -160,7 +176,8 @@
     "message": "پیام",
     "signedIn": "وارد سیستم شده\u200cاید",
     "title": "نظرات",
-    "submit": "ارسال نظر"
+    "submit": "ارسال نظر",
+    "success": "نظر با موفقیت ارسال شد!"
   },
   "privacy": {
     "effectiveDate": "تاریخ اجرا",
