--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -25,6 +25,9 @@
     "connection": "اړیکه",
     "simplicity": "سادگي"
   },
+  "common": {
+    "loading": "بارېږي..."
+  },
   "contact": {
     "title": "موږ سره اړیکه ونیسئ",
     "name": "نوم",
@@ -87,7 +90,13 @@
     "upload_placeholder": "د عکس پورته کولو لپاره کلیک وکړئ",
     "upload_note": "د ریحانه دیګ سره د پخلي شیبې شریک کړئ",
     "submit_photo": "عکس وسپارئ",
-    "view_all": "ټولې انځورونه وګورئ"
+    "view_all": "ټولې انځورونه وګورئ",
+    "search": "د ډوډۍ یا نوم له مخې لټون وکړئ",
+    "sort_newest": "تر ټولو نوي",
+    "sort_popular": "ډېر خوښ شوي",
+    "empty": "هیڅ عکس ونه موندل شو.",
+    "unlike": "نه خوښول",
+    "like": "په څېر"
   },
   "newsletter": {
     "title": "د ریحانه کورنۍ سره یوځای شئ",
@@ -132,7 +141,14 @@
     "featuredTitle": "ځانګړې کیسې",
     "featuredSubtitle": "زموږ تر ټولو خوښې ترکیبونه او کلتوري سفرونه.",
     "featured": "ځانګړی",
-    "viewAll": "ټول وګورئ"
+    "viewAll": "ټول وګورئ",
+    "featuredStory": "ځانګړې کیسه",
+    "readMore": "ولولئ",
+    "title": "د ریحانه پخلنځي ژورنال",
+    "subtitle": "د ورېښمو لارې د خوړو د بډایه میراث سپړنه، په یو وخت کې یوه کیسه",
+    "next": "راتلونکی",
+    "prev": "مخکینی",
+    "loading": "کیسې بارېږي..."
   },
   "help": {
     "notFound": "د مرستې مقاله ونه موندل شوه",
@@ -143,13 +159,22 @@
     "stepByStep": "ګام په ګام",
     "tips": "لارښوونې",
     "needHelpEmail": "لا هم مرسته غواړئ؟ برېښنالیک واستوئ",
-    "lastUpdated": "وروستی تازه کول"
+    "lastUpdated": "وروستی تازه کول",
+    "needHelp": "نورې مرستې ته اړتیا لرئ؟ موږ ته په دې بریښنالیک واستوئ"
   },
   "terms": {
+    "effectiveDate": "د پلي کېدو نېټه",
     "footer": {
       "needHelp": "مرستې ته اړتیا لرئ؟ لاړ شئ",
       "helpCenter": "د مرستې مرکز"
     }
+  },
+  "comments": {
+    "message": "پیغام",
+    "signedIn": "لاسلیک شوی",
+    "title": "تبصرې",
+    "submit": "لاسلیک شوی",
+    "success": "تبصره په بریالیتوب سره واستول شوه!"
   },
   "privacy": {
     "effectiveDate": "د پلي کېدو نېټه",
@@ -160,6 +185,7 @@
     "subtitle": "موږ خوښ یو چې له تاسو واورو. موږ ته پیغام واستوئ یا لیدنه وکړئ.",
     "info_title": "د اړیکې معلومات",
     "address": "پته",
+    "address_value": "د ژیجنګ ولایت، جینوا ښار، یی وو ښار، مالي او سوداګریزه ولسوالۍ، نمبر ۳ مالي سړک، لیانډو نړیوال ودانۍ، برخه B، خونه ۱۷۰۳",
     "phone": "تلیفون",
     "email": "بریښنالیک",
     "socials": "موږ تعقیب کړئ",
