Added contact messaging system for users to submit inquiries Introduced newsletter subscription functionality Added dashboard with statistics and admin management panels for contact messages and newsletter subscriptions Featured blog section now displays 4 posts Implemented pagination for media gallery and blog comments Improvements
Redesigned sidebar navigation with mobile-responsive collapsible menu
Enhanced RTL language support across the app
Expanded translations for new features and improved UI consistency
Added favicon support

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -30,10 +30,26 @@
     "name": "Name",
     "email": "Email",
     "message": "Message",
-    "send": "Send Message"
+    "send": "Send Message",
+    "sending": "Sending..."
   },
   "common": {
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "prev": "Previous",
+    "next": "Next",
+    "page": "Page",
+    "of": "of",
+    "success": "Success",
+    "error": "Error",
+    "delete": "Delete",
+    "cancel": "Cancel",
+    "noComments": "No comments yet. Be the first to share your thoughts!"
+  },
+  "confirm": {
+    "title": "Are you sure?",
+    "description": "This action cannot be undone.",
+    "confirm": "Confirm",
+    "cancel": "Cancel"
   },
   "products_page": {
     "title": "Our Premium Collection",
@@ -105,6 +121,16 @@
     "disclaimer": "We respect your privacy. Unsubscribe at any time.",
     "success_title": "Welcome to the Rayhana Family!",
     "success_message": "You are now part of our story. Get ready to receive exclusive tastes and traditions in your inbox."
+  },
+  "toast": {
+    "comment_posted": "Comment Posted Successfully",
+    "comment_submit_failed": "Failed to submit your comment. Please try again.",
+    "comment_updated": "Your comment has been updated successfully.",
+    "comment_update_failed": "Unable to update the comment. Please try again.",
+    "comment_deleted": "The comment has been deleted successfully.",
+    "comment_delete_failed": "Failed to delete the comment. Please try again.",
+    "comment_delete_title": "Delete comment?",
+    "comment_delete_body": "This will permanently remove your comment."
   },
   "faq": {
     "title": "Frequently Asked Questions",
