--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -26,14 +26,30 @@
     "simplicity": "سادگی"
   },
   "common": {
-    "loading": "در حال بارگذاری..."
+    "loading": "در حال بارگذاری...",
+    "prev": "قبلی",
+    "next": "بعدی",
+    "page": "صفحه",
+    "of": "از",
+    "success": "موفقیت",
+    "error": "خطا",
+    "delete": "حذف",
+    "cancel": "انصراف",
+    "noComments": "هنوز نظری ثبت نشده است. اولین نفری باشید که نظر خود را به اشتراک می‌گذارد!"
+  },
+  "confirm": {
+    "title": "مطمئن هستید؟",
+    "description": "این اقدام غیرقابل بازگشت است.",
+    "confirm": "تایید",
+    "cancel": "انصراف"
   },
   "contact": {
     "title": "تماس با ما",
     "name": "نام",
     "email": "ایمیل",
     "message": "پیام",
-    "send": "ارسال پیام"
+    "send": "ارسال پیام",
+    "sending": "درحال ارسال..."
   },
   "products_page": {
     "title": "مجموعه ممتاز ما",
@@ -139,6 +155,17 @@
     "recipe_2_desc": "دستور پخت خورش فسنجان با گردوی فراوان و پخت آرام برای روغن انداختن عالی.",
     "recipe_3_title": "آش رشته: گرمای دورهمی",
     "recipe_3_desc": "طرز تهیه آش رشته سنتی با کشک و پیاز داغ فراوان، مناسب برای عصرهای سرد."
+  },
+  "toast": {
+    "comment_posted": "نظر شما با موفقیت ثبت شد.",
+    "contact_sent": "پیام شما با موفقیت ارسال شد.",
+    "comment_submit_failed": "ارسال نظر با خطا مواجه شد. لطفاً دوباره تلاش کنید.",
+    "comment_updated": "نظر شما با موفقیت به‌روزرسانی شد.",
+    "comment_update_failed": "به‌روزرسانی نظر انجام نشد. لطفاً دوباره تلاش کنید.",
+    "comment_deleted": "نظر با موفقیت حذف شد.",
+    "comment_delete_failed": "حذف نظر با خطا مواجه شد. لطفاً دوباره تلاش کنید.",
+    "comment_delete_title": "حذف نظر؟",
+    "comment_delete_body": "این عمل باعث حذف دائمی نظر شما خواهد شد."
   },
   "blog": {
     "featuredTitle": "داستان‌های ویژه",
