--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -26,14 +26,30 @@
     "simplicity": "سادگي"
   },
   "common": {
-    "loading": "بارېږي..."
+    "loading": "بارېږي...",
+    "prev": "مخکینی",
+    "next": "راتلونکی",
+    "page": "مخ",
+    "of": "د",
+    "success": "بریا",
+    "error": "تېروتنه",
+    "delete": "حذف",
+    "cancel": "لغوه",
+    "noComments": "تر اوسه کوم نظر نشته. تاسو لومړی کس اوسئ چې خپل نظر شریکوئ!"
+  },
+  "confirm": {
+    "title": "یقیني یاست؟",
+    "description": "دا عمل بېرته نشي ستنیدای.",
+    "confirm": "تایید",
+    "cancel": "لغوه"
   },
   "contact": {
     "title": "موږ سره اړیکه ونیسئ",
     "name": "نوم",
     "email": "بریښنالیک",
     "message": "پیغام",
-    "send": "پیغام واستوئ"
+    "send": "پیغام واستوئ",
+    "sending": "لیږل"
   },
   "products_page": {
     "title": "زموږ غوره ټولګه",
@@ -137,12 +153,24 @@
     "recipe_3_title": "لاندی پلو: د ژمي سوغات",
     "recipe_3_desc": "د وچې غوښې (لاندی) پلو پخولو دودیزه طریقه د ریحانه په دیګ کې."
   },
+  "toast": {
+    "comment_posted": "ستاسو نظر په بریالیتوب سره ثبت شو.",
+    "contact_sent": "ستاسو نظر په بریالیتوب سره ثبت شو.",
+    "comment_submit_failed": "د نظر لېږل ناکام شول. مهرباني وکړئ بیا هڅه وکړئ.",
+    "comment_updated": "ستاسو نظر په بریالیتوب سره تازه شو.",
+    "comment_update_failed": "د نظر تازه کول ممکن نه شول. مهرباني وکړئ بیا هڅه وکړئ.",
+    "comment_deleted": "نظر په بریالیتوب سره حذف شو.",
+    "comment_delete_failed": "د نظر حذف کول ناکام شول. مهرباني وکړئ بیا هڅه وکړئ.",
+    "comment_delete_title": "نظر حذف شي؟",
+    "comment_delete_body": "دا کار به ستاسو نظر د تل لپاره حذف کړي."
+  },
   "blog": {
     "featuredTitle": "ځانګړې کیسې",
     "featuredSubtitle": "زموږ تر ټولو خوښې ترکیبونه او کلتوري سفرونه.",
     "featured": "ځانګړی",
     "viewAll": "ټول وګورئ",
     "featuredStory": "ځانګړې کیسه",
+    "cookWithUs": "ایا د اصیل قابلي پلو پخولو ته چمتو یې؟",
     "readMore": "ولولئ",
     "title": "د ریحانه پخلنځي ژورنال",
     "subtitle": "د ورېښمو لارې د خوړو د بډایه میراث سپړنه، په یو وخت کې یوه کیسه",
