Added honeypot fields to comment and contact forms for bot protection Added optional product URL field with "Purchase Link" display in product details Introduced complete image submission workflow for gallery including file preview and size validation Added localization for login pages and submission management across multiple languages Improvements
Enhanced dark mode support with improved design token system
Added rate limiting to contact and blog comment endpoints
Updated localized labels for comments and product pricing

--- a/client/src/locales/ar.json
+++ b/client/src/locales/ar.json
@@ -129,6 +129,12 @@
     "form_message": "الرسالة",
     "form_submit": "إرسال الرسالة"
   },
+  "confirm": {
+    "title": "هل أنت متأكد؟",
+    "description": "هذا الإجراء لا يمكن التراجع عنه.",
+    "confirm": "تأكيد",
+    "cancel": "إلغاء"
+  },
   "footer": {
     "rights": "© 2026 أجهزة مطبخ ريحانة. جميع الحقوق محفوظة."
   }
