--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -249,7 +249,7 @@
     "signedIn": "لاسلیک شوی",
     "title": "تبصرې",
     "submit": "لاسلیک شوی",
-    "signInToComment": "لد تبصرې کولو لپاره باید ننوتل شوی یاست.",
+    "signInToComment": "د تبصرې کولو لپاره باید ننوتل شوی یاست.",
     "success": "تبصره په بریالیتوب سره واستول شوه!"
   },
   "privacy": {
