--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -32,6 +32,12 @@
     "message": "Сообщение",
     "send": "Отправить сообщение"
   },
+  "confirm": {
+    "title": "Вы уверены?",
+    "description": "Это действие нельзя отменить.",
+    "confirm": "Подтвердить",
+    "cancel": "Отмена"
+  },
   "products_page": {
     "title": "Наша премиальная коллекция",
     "subtitle": "Откройте для себя идеальное сочетание традиций и современной инженерии.",
