--- a/client/src/locales/ku.json
+++ b/client/src/locales/ku.json
@@ -32,6 +32,12 @@
     "message": "Peyam",
     "send": "Peyam Bişînin"
   },
+  "confirm": {
+    "title": "Dılniyait?",
+    "description": "Ev kirin nayê vegerandin.",
+    "confirm": "Piştrast bike",
+    "cancel": "Betal bike"
+  },
   "products_page": {
     "title": "Koleksiyona Me ya Premium",
     "subtitle": "Têkeliya bêkêmasî ya kevneşopî û endezyariya nûjen kifş bikin.",
