type issues in gallery and typoggraphy card update

--- a/client/src/locales/ku.json
+++ b/client/src/locales/ku.json
@@ -33,7 +33,7 @@
     "send": "Peyam Bişînin"
   },
   "confirm": {
-    "title": "Dılniyait?",
+    "title": "Tu dilniya yî?",
     "description": "Ev kirin nayê vegerandin.",
     "confirm": "Piştrast bike",
     "cancel": "Betal bike"
