--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -11,6 +11,18 @@
     "subtitle": "تجربه طعم اصیل سنت با نوآوری مدرن.",
     "cta": "مشاهده محصولات"
   },
+  "common": {
+    "loading": "در حال بارگذاری...",
+    "prev": "قبلی",
+    "next": "بعدی",
+    "page": "صفحه",
+    "of": "از",
+    "success": "موفقیت",
+    "error": "خطا",
+    "delete": "حذف",
+    "cancel": "انصراف",
+    "noComments": "هنوز نظری ثبت نشده است. اولین نفری باشید که نظر خود را به اشتراک می‌گذارد!"
+  },
   "products": {
     "title": "مجموعه ما",
     "ladle_bonus": "ملاقه رایگان",
@@ -24,18 +36,6 @@
     "quality": "کیفیت تضمین شده (SGS)",
     "connection": "ارتباط",
     "simplicity": "سادگی"
-  },
-  "common": {
-    "loading": "در حال بارگذاری...",
-    "prev": "قبلی",
-    "next": "بعدی",
-    "page": "صفحه",
-    "of": "از",
-    "success": "موفقیت",
-    "error": "خطا",
-    "delete": "حذف",
-    "cancel": "انصراف",
-    "noComments": "هنوز نظری ثبت نشده است. اولین نفری باشید که نظر خود را به اشتراک می‌گذارد!"
   },
   "confirm": {
     "title": "مطمئن هستید؟",
@@ -129,7 +129,8 @@
     "brand_message_highlight": "حمایت شما زندگی‌ها را تغییر می‌دهد",
     "brand_message_p2": "این دیگ پلو افغانی فقط آغاز است. ما با این دیگ سنتی شروع کردیم، و به زودی محصولات بیشتری از ریحانه را در آشپزخانه‌تان خواهید دید—هر کدام با همان دقت و کیفیت.",
     "brand_signature": "با عشق و سپاس - خانواده ریحانه - ریشه و اصالت در زندگی مدرن",
-    "price": "تومان"
+    "price": "تومان",
+    "no_products": "محصولی یافت نشد"
   },
   "referral": {
     "card_title": "کارت دعوت طلایی ریحانه",
@@ -244,11 +245,12 @@
     "footer": {
       "needHelp": "کمک می‌خواهید؟ سری بزنید به",
       "helpCenter": "مرکز راهنما"
-    }
+    },
+    "effectiveDate": "تاریخ اجرا"
   },
   "comments": {
     "message": "نظر",
-    "signedIn": "وارد سیستم شده\u200cاید",
+    "signedIn": "وارد سیستم شده‌اید",
     "title": "نظرات",
     "submit": "ارسال نظر",
     "signInToComment": "برای نظر دادن باید وارد شوید.",
