--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -58,7 +58,8 @@
     "go_home": "بازگشت به خانه",
     "help": "راهنما",
     "privacy": "حریم خصوصی",
-    "terms": "قوانین"
+    "terms": "قوانین",
+    "adminRequired": "نیاز به دسترسی ادمین دارید!"
   },
   "my_submissions": {
     "title": "ارسال‌های من",
