--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -12,6 +12,7 @@
     "cta": "مشاهده محصولات"
   },
   "common": {
+    "sending": "درحال ارسال...",
     "loading": "در حال بارگذاری...",
     "prev": "قبلی",
     "next": "بعدی",
@@ -59,7 +60,28 @@
     "help": "راهنما",
     "privacy": "حریم خصوصی",
     "terms": "قوانین",
-    "adminRequired": "نیاز به دسترسی ادمین دارید!"
+    "adminRequired": "نیاز به دسترسی ادمین دارید!",
+    "signed_out": "شما از حساب کاربری خود خارج شدید",
+    "password": "رمز عبور",
+    "hide": "مخفی کردن",
+    "show": "نمایش",
+    "confirm_password": "تأیید رمز عبور",
+    "email": "ایمیل",
+    "google": "ادامه با گوگل",
+    "forgot_password": "رمز عبور خود را فراموش کرده‌اید؟",
+    "welcom": "خوش آمدید!",
+    "reset_sent": "لینک بازنشانی به ایمیل شما ارسال شد",
+    "forgot_title": "بازنشانی رمز عبور",
+    "name_placeholder": "نام خود را وارد کنید",
+    "veriy_first": "برای ادامه، ابتدا ایمیل خود را تأیید کنید",
+    "name": "نام کامل",
+    "send_reset": "ارسال لینک بازنشانی",
+    "have_account": "قبلاً حساب کاربری دارید؟",
+    "error": "مشکلی پیش آمد",
+    "password_mismatch": "رمز عبور و تأیید رمز عبور مطابقت ندارند",
+    "save_password": "ذخیره رمز عبور",
+    "reset_title": "تنظیم رمز عبور جدید",
+    "reset_success": "رمز عبور با موفقیت به‌روزرسانی شد. لطفاً وارد شوید."
   },
   "my_submissions": {
     "title": "ارسال‌های من",
