--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -73,7 +73,7 @@
     "password": "Password",
     "hide": "hide",
     "show": "show",
-    "confirm_password": "Confirm Passowrd",
+    "confirm_password": "Confirm Password",
     "email": "Email",
     "google": "Continue with Google",
     "forgot_password": "Forgot your Password?",
@@ -81,12 +81,12 @@
     "reset_sent": "Reset link has been sent to your email",
     "forgot_title": "Reset Your Password",
     "name_placeholder": "Enter your name",
-    "veriy_first": "To continue, verify your email first",
+    "verify_first": "To continue, verify your email first",
     "name": "Full Name",
     "send_reset": "Send reset link",
     "have_account": "Already have an account?",
     "error": "Something went wrong",
-    "password_mismatch": "Password and confirm password does not match",
+    "password_mismatch": "Password and confirm password do not match",
     "save_password": "Save Password",
     "reset_title": "Set a new password",
     "reset_success": "Password updated. Please sign in."
