--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -73,7 +73,7 @@
     "reset_sent": "لینک بازنشانی به ایمیل شما ارسال شد",
     "forgot_title": "بازنشانی رمز عبور",
     "name_placeholder": "نام خود را وارد کنید",
-    "veriy_first": "برای ادامه، ابتدا ایمیل خود را تأیید کنید",
+    "verify_first": "برای ادامه، ابتدا ایمیل خود را تأیید کنید",
     "name": "نام کامل",
     "send_reset": "ارسال لینک بازنشانی",
     "have_account": "قبلاً حساب کاربری دارید؟",
