--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -73,7 +73,7 @@
     "reset_sent": "د بیا تنظیم لینک ستاسو برېښنالیک ته واستول شو",
     "forgot_title": "خپل پټنوم بیا تنظیم کړئ",
     "name_placeholder": "خپل نوم دننه کړئ",
-    "veriy_first": "د دوام لپاره، لومړی خپل برېښنالیک تایید کړئ",
+    "verify_first": "د دوام لپاره، لومړی خپل برېښنالیک تایید کړئ",
     "name": "بشپړ نوم",
     "send_reset": "د بیا تنظیم لینک ولېږئ",
     "have_account": "ایا مخکې مو حساب جوړ کړی؟",
