User profile create and login functionalities has fully localized

--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -81,7 +81,67 @@
     "password_mismatch": "پټنوم او د پټنوم تایید سره سمون نه خوري",
     "save_password": "پټنوم خوندي کړئ",
     "reset_title": "نوی پټنوم وټاکئ",
-    "reset_success": "پټنوم په بریالیتوب سره تازه شو. مهرباني وکړئ ننوتل وکړئ."
+    "reset_success": "پټنوم په بریالیتوب سره تازه شو. مهرباني وکړئ ننوتل وکړئ.",
+    "invalid_credentials": "د ننوتلو معلومات ناسم دي",
+    "signed_in": "په بریالیتوب سره ننوتل وشول"
+  },
+  "profile": {
+    "title": "ستاسو پروفایل",
+    "subtitle": "خپل معلومات او امنیت مدیریت کړئ.",
+    "details": "د حساب جزییات",
+    "avatar_url": "د پروفایل انځور لینک",
+    "name": "نوم",
+    "name_ph": "ستاسو بشپړ نوم",
+    "email": "ستاسو ایمیل",
+    "updated": "پروفایل تازه شو",
+    "saving": "په خوندي کولو کې...",
+    "save": "بدلونونه خوندي کړئ",
+    "stats": "ستاسو فعالیت",
+    "stat": {
+      "gallery": "ګالري",
+      "likes": "خوښونې",
+      "blogs": "بلاګونه",
+      "blog_comments": "بلاګ",
+      "products": "محصولات",
+      "media": "رسنۍ"
+    },
+    "password": "پاسورډ بدلول",
+    "create_password": "پاسورډ جوړول",
+    "current_password": "اوسنی پاسورډ",
+    "new_password": "نوی پاسورډ",
+    "set_password": "پاسورډ تنظیمول",
+    "confirm_password": "د نوي پاسورډ تایید",
+    "confirm_set_password": "پاسورډ تایید کړئ",
+    "updating": "په تازه کولو کې...",
+    "update_password": "پاسورډ تازه کړئ",
+    "create_password_btn": "پاسورډ جوړ کړئ",
+    "uploading": "د پورته کولو په حال کې...",
+    "image_hint": "تر ۳ مېګابایټه پورې، مربعي انځور غوره دی",
+    "image_uploaded": "انځور په بریالیتوب سره پورته شو",
+    "image_upload_failed": "د انځور پورته کول ناکام شول",
+    "upload_image": "انځور پورته کړئ",
+    "password_mismatch": "پاسورډونه سره برابر نه دي",
+    "password_updated": "پاسورډ تازه شو",
+    "password_created": "پاسورډ جوړ شو",
+    "guests_only": "دا برخه یوازې د مېلمنو کاروونکو لپاره ده",
+    "failed_load": "د معلوماتو پورته کول ناکام شول",
+    "no_changes": "هیڅ بدلون نه دی شوی",
+    "email_in_use": "دا ایمیل مخکې کارول شوی دی",
+    "failed_update": "تازه کول ناکام شول",
+    "new_password_required": "د نوي پاسورډ داخلول اړین دي",
+    "current_password_required": "د اوسني پاسورډ داخلول اړین دي",
+    "current_password_incorrect": "اوسنی پاسورډ ناسم دی",
+    "failed_change_password": "د پاسورډ بدلول ناکام شول",
+    "sync_missing_fields": "د همغږۍ لپاره ځینې اړین برخې نشته",
+    "sync_failed": "همغږي ناکامه شوه",
+    "update_failed": "تازه کول ناکام شول",
+    "bad_file": "د فایل بڼه ناسمه ده",
+    "too_large": "د فایل اندازه له حده زیاته ده",
+    "dim_failed": "د انځور د ابعادو ارزونه ناکامه شوه",
+    "dim_too_small": "د انځور ابعاد ډېر کوچني دي",
+    "dim_too_large": "د انځور ابعاد ډېر لوی دي",
+    "password_changed": "پاسورډ په بریالیتوب سره بدل شو",
+    "password_failed": "د پاسورډ بدلول ناکام شول"
   },
   "my_submissions": {
     "title": "زما ارسالي انځورونه",
