--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -63,6 +63,7 @@
     "sign_out": "Sign Out",
     "dashboard": "Dashboard",
     "guest_dashboard": "My Photos",
+    "invalid_credentials": "Invalide Credentials",
     "profile": "Profile",
     "go_home": "Go to Home",
     "help": "Help",
@@ -90,6 +91,65 @@
     "save_password": "Save Password",
     "reset_title": "Set a new password",
     "reset_success": "Password updated. Please sign in."
+  },
+  "profile": {
+    "title": "Your Profile",
+    "subtitle": "Manage your info and security.",
+    "details": "Account details",
+    "avatar_url": "Avatar URL",
+    "name": "Name",
+    "name_ph": "Your Full Name",
+    "email": "Your Email",
+    "updated": "Profile Updated",
+    "saving": "Saving...",
+    "save": "Save Changes",
+    "stats": "Your Activity",
+    "stat": {
+      "gallery": "Gallery",
+      "likes": "Likes",
+      "blogs": "Blogs",
+      "blog_comments": "Blog",
+      "products": "Products",
+      "media": "Media"
+    },
+    "password": "Change password",
+    "create_password": "Create password",
+    "current_password": "Current password",
+    "new_password": "New password",
+    "set_password": "Set password",
+    "confirm_password": "Confirm new",
+    "confirm_set_password": "Confirm password",
+    "updating": "Updating...",
+    "update_password": "Update password",
+    "create_password_btn": "Create password",
+    "uploading": "Uploading...",
+    "image_hint": "Up to 3MB, square preferred ",
+    "image_uploaded": "Image uploaded",
+    "image_upload_failed": "Failed to upload image",
+    "password_updated": "Password Updated",
+    "password_created": "Password Created",
+    "guests_only": "This section is available to guest users only",
+    "failed_load": "Failed to load data",
+    "no_changes": "No changes were made",
+    "email_in_use": "This email is already in use",
+    "failed_update": "Failed to update",
+    "new_password_required": "New password is required",
+    "current_password_required": "Current password is required",
+    "current_password_incorrect": "Current password is incorrect",
+    "failed_change_password": "Failed to change password",
+    "sync_missing_fields": "Some required fields are missing for sync",
+    "sync_failed": "Synchronization failed",
+    "mutate": "Processing request...",
+    "update_failed": "Update failed",
+    "bad_file": "Invalid file format",
+    "too_large": "File size exceeds the allowed limit",
+    "dim_failed": "Failed to validate image dimensions",
+    "dim_too_small": "Image dimensions are too small",
+    "dim_too_large": "Image dimensions are too large",
+    "password_mismatch": "Passwords do not match",
+    "password_changed": "Password changed successfully",
+    "password_failed": "Password change failed",
+    "upload_image": "Upload image"
   },
   "my_submissions": {
     "title": "My Gallery Submissions",
